Fix bug where reading a file from the .jar would not work